--- a/ProyectoPooDist/src/PaquetePrincipal/ESTADOGESTIONPILOTOS.form
+++ b/ProyectoPooDist/src/PaquetePrincipal/ESTADOGESTIONPILOTOS.form
@@ -344,6 +344,7 @@
             </Container>
             <Component class="javax.swing.JTextField" name="jTextField5">
               <Properties>
+                <Property name="editable" type="boolean" value="false"/>
                 <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
                   <Color blue="99" green="99" red="0" type="rgb"/>
                 </Property>
@@ -374,7 +375,7 @@
                               <Group type="102" alignment="0" attributes="0">
                                   <Component id="jLabel18" min="-2" max="-2" attributes="0"/>
                                   <EmptySpace max="-2" attributes="0"/>
-                                  <Component id="txtEstadoPiloto" min="-2" pref="183" max="-2" attributes="0"/>
+                                  <Component id="txtEstadoPilotoModificar" min="-2" pref="183" max="-2" attributes="0"/>
                               </Group>
                               <Group type="103" alignment="0" groupAlignment="1" attributes="0">
                                   <Component id="jScrollPane3" alignment="1" min="-2" pref="805" max="-2" attributes="0"/>
@@ -392,7 +393,7 @@
                           <Component id="jScrollPane3" min="-2" pref="227" max="-2" attributes="0"/>
                           <EmptySpace min="-2" pref="31" max="-2" attributes="0"/>
                           <Group type="103" groupAlignment="3" attributes="0">
-                              <Component id="txtEstadoPiloto" alignment="3" min="-2" max="-2" attributes="0"/>
+                              <Component id="txtEstadoPilotoModificar" alignment="3" min="-2" max="-2" attributes="0"/>
                               <Component id="jLabel18" alignment="3" min="-2" max="-2" attributes="0"/>
                           </Group>
                           <EmptySpace min="-2" pref="40" max="-2" attributes="0"/>
@@ -454,7 +455,7 @@
                     <Property name="text" type="java.lang.String" value="ESTADO DEL PILOTO"/>
                   </Properties>
                 </Component>
-                <Component class="javax.swing.JComboBox" name="txtEstadoPiloto">
+                <Component class="javax.swing.JComboBox" name="txtEstadoPilotoModificar">
                   <Properties>
                     <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
                       <StringArray count="5">
