--- a/ProyectoPooDist/src/PaquetePrincipal/LISTAGESTIONPILOTOS.form
+++ b/ProyectoPooDist/src/PaquetePrincipal/LISTAGESTIONPILOTOS.form
@@ -104,6 +104,7 @@
           <SubComponents>
             <Component class="javax.swing.JTextField" name="jTextField5">
               <Properties>
+                <Property name="editable" type="boolean" value="false"/>
                 <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
                   <Color blue="99" green="99" red="0" type="rgb"/>
                 </Property>
